--- a/public/stylesheets/scss/_index.scss
+++ b/public/stylesheets/scss/_index.scss
@@ -87,6 +87,7 @@ body.index-body {
                             right: 0;
 
                             backdrop-filter: blur(10px);
+                            -webkit-backdrop-filter: blur(10px);
                         }
                     }
                 }
